[package]
name = "nosleep-mac-sys"
version = "0.1.0"
edition = "2018"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[build-dependencies]
cc = "1.0.73"