[package]
name = "nosleep-mac-sys"
description = "Block power save mode for macOS"
authors = ["Peter Evers"]
version = "0.1.0"
edition = "2018"
rust-version = "1.56"

homepage = "https://github.com/pevers/nosleep-mac-sys"
repository = "https://github.com/pevers/nosleep-mac-sys"

license = "MIT"
keyword = ["nosleep", "powersave", "caffeine", "macOS"]
readme = "README.md"

build = "build.rs"

[dependencies]
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[build-dependencies]
cc = "1.0.73"